--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="text-one">Hello,</div>
         <div class="text-two">I'm Sakshi Sinha</div>
         <div class="text-three">HR Student</div>
-        <div class="text-four">From Bengluru</div>
+        <div class="text-four">From Bengaluru</div>
       </div>
       <!--div class="button">
         <button>Hire Me</button>
